trunk/Archive2/e3/ccfe798cb8b88a/output
main.cpp: In function 'int main()':
main.cpp:11:5: error: 'set_intersection' is not a member of 'std'
     std::set_intersection(v1.begin(), v1.end(),
     ^
